[project]
name = "langchain-tutorials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.9",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.8",
    "pydantic>=2.7,<3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.54.0",
    "wikipedia>=1.4.0",
]
